--- a/lawsystem/templates/clientRegister.html
+++ b/lawsystem/templates/clientRegister.html
@@ -88,6 +88,8 @@
 
     <label for="phno">Ph No.*</label>
     <input style="width: 50%;" type="tel" placeholder="----Enter Ph No. in 999-999-999 format---" name="phno" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"><br><br>
+    <label for="address"><b>Address</b></label>
+    <input type="text"   name="address" required><br>
     <label for="email"><b>Email*</b></label>
     <input type="email"  placeholder="---Enter email ex: rahul@gmail.com--"  name="email" required>
     <br>
