--- a/lawsystem/templates/clientSettings.html
+++ b/lawsystem/templates/clientSettings.html
@@ -174,6 +174,10 @@ body{
                     <input type="text" class="form-control" id="phno" name="phoneNo" placeholder="Enter your Phone no." value="{{userInfo.phno}}">
                   </div>
                   <div class="form-group">
+                    <label for="address">Address</label>
+                    <input type="text" class="form-control" id="address" name="address" placeholder="Enter your Address here" value="{{userInfo.address}}">
+                  </div>
+                  <div class="form-group">
                     <label for="Email">Email Address</label>
                     <input type="text" class="form-control" id="Email" name="email" placeholder="Enter your Email Address" value="{{userInfo.email}}">
                   </div>
