--- a/lawsystem/templates/invoice-list.html
+++ b/lawsystem/templates/invoice-list.html
@@ -1,4 +1,4 @@
-{% extends 'invoice/base.html' %}
+{% extends 'base.html' %}
 {% block content %}
 <div class="columns is-centered has-text-centered">
     <div class="column is-half">
