--- a/lawsystem/templates/temp.html
+++ b/lawsystem/templates/temp.html
@@ -1,65 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
     {%load static%}
-
 <head>
     <meta charset="utf-8">
     <title>Invoice</title>
     <link rel="stylesheet" href="{% static 'styles/style.css' %}">
     <script src="{% static 'styles/script.js' %}"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  
-  <style>
-    .user-details {
-        display: inline-block;
-        border-radius: 4px;
-        background-color: #f16439;
-        border: none;
-        color: #FFFFFF;
-        text-align: center;
-        font-size: 16px;
-        padding: 10px;
-        width: 100px;
-        transition: all 0.5s;
-        cursor: pointer;
-        margin: 5px;
-        opacity: 0.6;
-       
-      }
-      .user-details:hover {opacity: 1}
-    </style>
   
 </head>
 <body>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <form method="POST" action="/generateInvoice/">
+        {%csrf_token%}
     <header>
         <h1>Invoice</h1>
         <address contenteditable>
-            <p>Advocate name</p>
-            <p>Address#1<br>Address#2</p>
-            <p>PHNO.</p>
+            <b>Advocate Details:</b><br>
+               <p>{{user_ad.first_name}} {{user_ad.last_name}}</p>
+            <p> {{user_ad.address}}</p>
+            <p> {{user_ad.phno}}</p>
         </address>
        
     </header>
     <article>
+        
         <h1>Recipient</h1>
         <address contenteditable>
-            <p>Client name</p>
-            <p>Address#1<br>Address#2</p>
-            <p>PHNO.</p>
+            <p>{{user_cli.first_name}} {{user_cli.last_name}}</p>
+            <p>{{user_cli.address}}</p>
+            <p>{{user_cli.phno}}.</p>
         </address>
         <table class="meta">
             <tr>
                 <th><span contenteditable>Invoice #</span></th>
-                <td><span contenteditable>101138</span></td>
+                <td ><span contenteditable><input type="text" name="invoice_no" required ></span></td>
             </tr>
             <tr>
                 <th><span contenteditable>Date</span></th>
-                <td><span contenteditable>January 1, 2012</span></td>
+                <td ><span contenteditable><input type="date" name="date" required ></span></td>
+            </tr>
+            <tr>
+                <th><span contenteditable>Due Date</span></th>
+                <td><span contenteditable><input type="date" name="due_date" required ></span></td>
             </tr>
             <tr>
                 <th><span contenteditable>Amount Due</span></th>
-                <td><span id="prefix" contenteditable>Rs.</span><span>600.00</span></td>
+                <td><span id="prefix" contenteditable>Rs.</span></td>
             </tr>
         </table>
         <table class="inventory">
@@ -82,46 +68,11 @@
                 </tr>
             </tbody>
         </table>
-        <form id="form" method="POST">  
-            {% csrf_token %}
-            <button type="submit" id="data_btn">Submit</button><br><br>
-            
-            <!--button type="submit" id="done_btn" value=data1 >Submit</button-->
-    
-            </form>
-            <script type="text/javascript">
-                $(document).ready(function(){
-                    $('form').submit(function(){
-                        event.preventDefault();
-                        var data1=""
-                        for (var a = document.querySelectorAll('table.inventory tbody tr td'), i = 0; a[i]; ++i){
-                    data1+=a[i].textContent+",";
-                }
-                alert(data1)
-                        $.ajax({
-                            url: "{% url 'invoice_data' %}",
-                            headers: {
-        'X-CSRFToken': $('input[name=csrfmiddlewaretoken]').val()
-    },
-                            type: 'POST',
-                            data: {
-                                'data1[]':data1
-                            }
-                            ,success: function(data){
-                                console.log('Success!');
-                            },
-                            dataType:'json'
-                        });
-                        return false;
-                    });
-                });
-            </script>
-<br><br>
         <a class="add">+</a>
         <table class="balance">
             <tr>
                 <th><span contenteditable>Total</span></th>
-                <td><span data-prefix>Rs.</span><span>600.00</span></td>
+                <td name="total"><span data-prefix>Rs.</span><span >600.00</span></td>
             </tr>
             <tr>
                 <th><span contenteditable>Amount Paid</span></th>
@@ -129,7 +80,7 @@
             </tr>
             <tr>
                 <th><span contenteditable>Balance Due</span></th>
-                <td><span data-prefix>Rs.</span><span>600.00</span></td>
+                <td><span data-prefix>Rs.</span><span name="balance_due">600.00</span></td>
             </tr>
         </table>
     </article>
@@ -141,9 +92,9 @@
             * A finance charge of 1.5% will be made on unpaid balances after 30 days<br>
             * If you have any questions concerning this invoice, contact  way2CMS@gmail.com
          </div>
-         
+       
     </aside>
-    <br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br>
     <footer>
         <p class="text-center m-b-5 f-w-600">
             THANK YOU FOR YOUR BUSINESS
@@ -154,8 +105,9 @@
             <span class="m-r-10"><i class="fa fa-fw fa-lg fa-envelope"></i> way2CMS@gmail.com</span>
          </p>
     </footer>
-    <br><br><br><br>
-    
+    <br><br>
 
+    <button class="button" name="updatebtn" type="submit">Submit</button>
+    </form>
 </body>
 </html>
