--- a/lawsystem/templates/home.html
+++ b/lawsystem/templates/home.html
@@ -152,7 +152,7 @@ width: 100%;
               <a class="nav-link" href="#about"  >About</a>
             </li>  
             <li class="nav-item ">
-              <a class="nav-link" href="#"  >Contact</a>
+              <a class="nav-link" href="#feedback_section"  >Contact</a>
             </li>            
             <li class="nav-item ">
               <a class="nav-link" href="#feedback_section"  >Feedback</a>
@@ -257,6 +257,8 @@ width: 100%;
               <div class="card">
                   <div class="card-body tab-content">
                       <div class="tab-pane active" id="profile">
+                        <h2>Feedback Form</h2>
+                        <br>
                       <p class="text-dark text-centre">We want the best for our users. How about you give some feedback, so that we can better and better!!</p>
                       <form>
                       <div class="form-group">
@@ -275,16 +277,23 @@ width: 100%;
                       </form>
                       </div></div></div>
               </div>
+              <div class="col-md-4">
+                <div class="card">
+                  <div class="card-body tab-content" style="font-size: medium;">
+                    <h2>Contact</h2>
+              <br>
+                 <i class="fa fa-phone-square" aria-hidden="true"></i>&nbsp; &nbsp;+91 82874 69456<br><br>
+                 <i class="fa fa-envelope" aria-hidden="true"></i>&nbsp; &nbsp;way2CMS@gmail.com<br><br>
+                    <i class="fa fa-instagram" aria-hidden="true"></i>&nbsp; &nbsp;instagram.com/way2CMS<br><br>
+                  <i class="fa fa-facebook-square" aria-hidden="true"></i>&nbsp; &nbsp;facebook.com/way2CMS<br><br>
+        
+                    </div>
+                    </div>
+                </div>
           </div>
       </div>
       
-        <div class="card-footer text-light bg-dark">
-          <i class="fa fa-phone-square" aria-hidden="true"></i>&nbsp; &nbsp;
-          <i class="fa fa-envelope" aria-hidden="true"></i>&nbsp; &nbsp;
-          <i class="fa fa-instagram" aria-hidden="true"></i>&nbsp; &nbsp;
-          <i class="fa fa-facebook-square" aria-hidden="true"></i>
-        </div>
-        
+       
       
       </section>
     </body>     
