--- a/lawsystem/lawsystem/static/styles/style.css
+++ b/lawsystem/lawsystem/static/styles/style.css
@@ -13,13 +13,18 @@
 	padding: 0;
 	text-decoration: none;
 	vertical-align: top;
+
+}
+body{
+	margin-left: 100px;
+	background-color: darkgray;
 }
 
 .button {
 	background-color: #555555;
 	border: none;
 	color: white;
-	padding: 15px 32px;
+	padding: 30px 30px;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
@@ -30,7 +35,7 @@
 
 /* content editable */
 
-*[contenteditable] { border-radius: 0.25em; min-width: 1em; outline: 0; }
+*[contenteditable] { border-radius: 0.25em; min-width: 1em; outline: 0; font-size: 20x; }
 
 *[contenteditable] { cursor: pointer; }
 
@@ -53,18 +58,15 @@ td { border-color: #DDD; }
 
 /* page */
 
-html { font: 16px/1 'Open Sans', sans-serif; overflow: auto; padding: 0.5in; }
-html { background: #999; cursor: default; }
-
-body { box-sizing: border-box; height: 11in; margin: 0 auto; overflow: hidden; padding: 0.5in; width: 8.5in; }
-body { background: #FFF; border-radius: 1px; box-shadow: 0 0 1in -0.25in rgba(0, 0, 0, 0.5); }
+.invoice_div{  margin: 0 auto; overflow: hidden;  width:800px; float: center; padding-left: 20px; padding-right: 20px; font-size:inherit;font-size: inherit;}
+.invoice_div { box-sizing: content-box; background:white; border-radius: 1px; box-shadow: 0 0 1in -0.25in rgba(0, 0, 0, 0.5);  }
 
 /* header */
 
 header { margin: 0 0 3em; }
 header:after { clear: both; content: ""; display: table; }
 
-header h1 { background: #000; border-radius: 0.25em; color: #FFF; margin: 0 0 1em; padding: 0.5em 0;}
+header h1 { background: #000; border-radius: 0.25em; font-size: small; color: #FFF; margin: 0 0 1em; padding: 0.5em 0 ; height: 30px;}
 header address { float: left; font-size: 75%; font-style: normal; line-height: 1.25; margin: 0 1em 1em 0; }
 header address p { margin: 0 0 0.25em; }
 header span, header img { display: block; float: right; }
@@ -76,7 +78,7 @@ header input { cursor: pointer; -ms-filter:"progid:DXImageTransform.Microsoft.Al
 
 article, article address, table.meta, table.inventory { margin: 0 0 3em; }
 article:after { clear: both; content: ""; display: table; }
-article h1 { background: #000; border-radius: 0.25em; color: #FFF; margin: 0 0 1em; padding: 0.5em 0;width: 50%; }
+article h1 { background: #000; border-radius: 0.25em; color: #FFF; margin: 0 0 1em; padding: 0.5em 0; height: 30px; width: 50%;  font-size: small; }
 
 article address { float: left; font-size: 75%; font-style: normal; line-height: 1.25; margin: 0 1em 1em 0; }
 
@@ -87,7 +89,7 @@ table.meta:after, table.balance:after { clear: both; content: ""; display: table
 
 /* table meta */
 
-table.meta th { width: 40%; }
+table.meta th { width: 40%; border-radius: 5px; }
 table.meta td { width: 60%; }
 
 /* table items */
@@ -103,12 +105,12 @@ table.inventory td:nth-child(5) { text-align: right; width: 12%; }
 
 /* table balance */
 
-table.balance th, table.balance td { width: 50%; }
+table.balance th, table.balance td { width: 50%; border-radius: 5px; box-shadow: 0 0 1in -0.25in rgba(0, 0, 0, 0.5); }
 table.balance td { text-align: right; }
 
 /* aside */
 
-aside h1 { border: none; border-width: 0 0 1px; margin: 0 0 1em; }
+aside h1 { border: none; border-width: 0 0 1px; margin: 0 0 1em; font-size: medium; font-weight: bold;}
 aside h1 { border-color: #999; border-bottom-style: solid; }
 
 /* javascript */
@@ -121,7 +123,7 @@ aside h1 { border-color: #999; border-bottom-style: solid; }
 	padding: 0.25em 0.5em;	
 	float: left;
 	text-align: center;
-	width: 0.6em;
+	width:max-content;
 }
 
 .add, .cut
